infrastructure/monitoring/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Homepage"
    gethomepage.dev/group: "Monitoring"
    gethomepage.dev/icon: "homepage.png"
    gethomepage.dev/description: "Cluster homepage"
    gethomepage.dev/href: "https://homepage.home.arpa/"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - homepage.home.arpa
      secretName: homelab-wildcard-tls
  rules:
  - host: homepage.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              number: 3000
